fixing buttons and gaps between grids

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*All document*/
 
 html {
-    width: 980px;
+    max-width: 980px;
     font-family: 'Work Sans', sans-serif;
 }
 
@@ -43,6 +43,8 @@ header {
 .flex .navbar li {
     display: inline;
     padding-left: 10px;
+    padding-right: 0px;
+    padding-bottom: -5px;
 }
 
 .flex .navbar li a {
@@ -61,7 +63,7 @@ header {
     display: grid;
     grid-template-rows: 50em 70vh auto;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 2px;
+    grid-gap: 5px;
     grid-template-areas: "a a a" "b c d";
     justify-content: center;
 }
@@ -97,6 +99,10 @@ header {
 .vertical1>button {
     display: block;
     margin: auto;
+    padding: 0 40px;
+    border: none;
+    background-color: white;
+    color: black;
 }
 
 .grid1>.vertical2 {
@@ -116,6 +122,10 @@ header {
 .vertical2>button {
     display: block;
     margin: auto;
+    padding: 0 40px;
+    border: none;
+    background-color: white;
+    color: black;
 }
 
 .grid1>.vertical3 {
@@ -135,6 +145,10 @@ header {
 .vertical3>button {
     display: block;
     margin: auto;
+    padding: 0 40px;
+    border: none;
+    background-color: white;
+    color: black;
 }
 
 .grid2 {
@@ -142,7 +156,7 @@ header {
     grid-template-rows: 25em auto;
     grid-template-columns: 1fr 1fr;
     grid-template-areas: "a b";
-    grid-gap: 2px;
+    grid-gap: 5px;
     justify-content: center;
 }
 
@@ -163,6 +177,10 @@ header {
 .horizontal2>button {
     display: block;
     margin: auto;
+    padding: 0 40px;
+    border: none;
+    background-color: white;
+    color: black;
 }
 
 .grid2>.horizontal3 {
@@ -182,6 +200,10 @@ header {
 .horizontal3>button {
     display: block;
     margin: auto;
+    padding: 0 40px;
+    border: none;
+    background-color: white;
+    color: black;
 }
 
 .email {
@@ -202,7 +224,7 @@ header {
     margin: auto;
     background-color: #CF2C30;
     color: white;
-    padding: 5px;
+    padding: 0 40px;
     border: none;
 }
 
